# AI_with_OCCA

./: .gitattributes  README.md
PercepTron/: CMakeLists.txt  CMakePresets.json  main.cpp
PercepTron/dataset/: data_reader.cpp  data_reader.hpp
PercepTron/linux/: CMakeCache.txt  Makefile  PTron  cmake_install.cmake
PercepTron/linux/.cmake/api/v1/reply/: cache-v2-a578a931a78e493b6bb2.json  cmakeFiles-v1-ff20ca00e8abc144f3fc.json  codemodel-v2-16f58c9a3ee78408e5ba.json  index-2024-11-13T01-41-50-0449.json  target-PTron-Debug-997a6bd3901ad074a2d3.json
PercepTron/model/: Dot.okl  Perceptron.cpp  Perceptron.hpp  infetence.okl
dsets/: .gitattributes
